--- a/app/src/main/res/layout/activity_hunt_hot_map.xml
+++ b/app/src/main/res/layout/activity_hunt_hot_map.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <com.xdluoyang.ffxivtools.widget.ZoomImageView
+    <com.xdluoyang.ffxivtools.widget.HotMapView
         android:id="@+id/hot_map_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
