--- a/app/src/main/res/drawable/dunge_item_4.xml
+++ b/app/src/main/res/drawable/dunge_item_4.xml
@@ -3,11 +3,5 @@
     <item
         android:width="34dp"
         android:height="34dp"
-        android:drawable="@mipmap/icon_dunge_taofa" />
-    <item
-        android:width="13dp"
-        android:height="13dp"
-        android:drawable="@mipmap/ic_num_1"
-        android:left="18dp"
-        android:top="18dp" />
+        android:drawable="@mipmap/icon_dunge_other" />
 </layer-list>
