--- a/app/src/main/res/layout/activity_explore_detail.xml
+++ b/app/src/main/res/layout/activity_explore_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.xdluoyang.ffxivtools.pages.PetMountDetailActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp">
@@ -159,6 +159,6 @@
             app:layout_constraintStart_toStartOf="@+id/name"
             app:layout_constraintTop_toBottomOf="@+id/image1" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
