--- a/app/src/main/res/layout/activity_pet_mount_detail.xml
+++ b/app/src/main/res/layout/activity_pet_mount_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.xdluoyang.ffxivtools.pages.PetMountDetailActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp">
@@ -105,6 +105,6 @@
             app:layout_constraintTop_toBottomOf="@+id/desLabel" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
 
