--- a/app/src/main/res/layout/activity_dungeons.xml
+++ b/app/src/main/res/layout/activity_dungeons.xml
@@ -7,136 +7,144 @@
     android:paddingTop="8dp"
     tools:context="com.xdluoyang.ffxivtools.pages.DungeonsActivity">
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
+    <HorizontalScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:checkedButton="@+id/btn1"
-        android:orientation="horizontal"
-        android:padding="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        android:scrollbars="none">
 
-        <RadioButton
-            android:id="@+id/btn1"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_1_1"
-            android:button="@null"
-            android:contentDescription="迷宫挑战(新生)"
-            android:gravity="center" />
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:checkedButton="@+id/btn1"
+            android:orientation="horizontal"
+            android:padding="0dp">
 
-        <RadioButton
-            android:id="@+id/btn2"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_1_2"
-            android:button="@null"
-            android:contentDescription="迷宫挑战(苍穹)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn1"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_1_1"
+                android:button="@null"
+                android:contentDescription="迷宫挑战(新生)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn3"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_1_3"
-            android:button="@null"
-            android:contentDescription="迷宫挑战(红莲)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn2"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_1_2"
+                android:button="@null"
+                android:contentDescription="迷宫挑战(苍穹)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn4"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_1_4"
-            android:button="@null"
-            android:contentDescription="迷宫挑战(漆黑)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn3"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_1_3"
+                android:button="@null"
+                android:contentDescription="迷宫挑战(红莲)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn5"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_2_1"
-            android:button="@null"
-            android:contentDescription="讨伐歼灭(新生)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn4"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_1_4"
+                android:button="@null"
+                android:contentDescription="迷宫挑战(漆黑)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn6"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_2_2"
-            android:button="@null"
-            android:contentDescription="讨伐歼灭(苍穹)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn5"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_2_1"
+                android:button="@null"
+                android:contentDescription="讨伐歼灭(新生)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn7"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_2_3"
-            android:button="@null"
-            android:contentDescription="讨伐歼灭(红莲)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn6"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_2_2"
+                android:button="@null"
+                android:contentDescription="讨伐歼灭(苍穹)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn8"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_2_4"
-            android:button="@null"
-            android:contentDescription="讨伐歼灭(漆黑)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn7"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_2_3"
+                android:button="@null"
+                android:contentDescription="讨伐歼灭(红莲)"
+                android:gravity="center" />
+
+            <RadioButton
+                android:id="@+id/btn8"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_2_4"
+                android:button="@null"
+                android:contentDescription="讨伐歼灭(漆黑)"
+                android:gravity="center" />
 
 
-        <RadioButton
-            android:id="@+id/btn9"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_3_1"
-            android:button="@null"
-            android:contentDescription="大型任务(新生)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn9"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_3_1"
+                android:button="@null"
+                android:contentDescription="大型任务(新生)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn10"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_3_2"
-            android:button="@null"
-            android:contentDescription="大型任务(苍穹)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn10"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_3_2"
+                android:button="@null"
+                android:contentDescription="大型任务(苍穹)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn11"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_3_3"
-            android:button="@null"
-            android:contentDescription="大型任务(红莲)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn11"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_3_3"
+                android:button="@null"
+                android:contentDescription="大型任务(红莲)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn12"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_3_4"
-            android:button="@null"
-            android:contentDescription="大型任务(漆黑)"
-            android:gravity="center" />
+            <RadioButton
+                android:id="@+id/btn12"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_3_4"
+                android:button="@null"
+                android:contentDescription="大型任务(漆黑)"
+                android:gravity="center" />
 
-        <RadioButton
-            android:id="@+id/btn13"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:background="@drawable/dunge_item_bg_4"
-            android:button="@null"
-            android:contentDescription="其他"
-            android:gravity="center" />
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/btn13"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
+                android:background="@drawable/dunge_item_bg_4"
+                android:button="@null"
+                android:contentDescription="其他"
+                android:gravity="center" />
+        </RadioGroup>
+    </HorizontalScrollView>
+
 
     <TextView
         android:id="@+id/name"
@@ -149,7 +157,7 @@
         android:textSize="13sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_view"
