--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -4,13 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".pages.WeatherActivity">
+    tools:context=".weather.WeatherActivity">
 
     <TextView
         android:id="@+id/tv_eorezea_time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="15dp" />
+
+    <TextView
+        android:id="@+id/tv_weather_info"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/tv_eorezea_time"
+        app:layout_constraintStart_toStartOf="@+id/tv_eorezea_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_eorezea_time" />
 </androidx.constraintlayout.widget.ConstraintLayout>
